Added a new html css java all names 4

--- a/index.html
+++ b/index.html
@@ -10,32 +10,25 @@
     <title>Bills Magic Maps</title>
 </head>
 
-<div class="wrapper">
-    <!-- Navagation -->
-    <nav class="main-nav">
-        <ul>
-            <li> <a href="index1.html">Monday</a></li>
-            <li> <a href="#">Tuesday</a></li>
-            <li> <a href="#">Wednesday</a></li>
-            <li> <a href="#">Thursday</a></li>
-            <li> <a href="#">Friday</a></li>
-            <li> <a href="#">Saturday</a></li>
-        </ul>
-    </nav>
-
-</div>
-
-
 <body>
-    <section class="showcase1">
-        <div class="container">
-            <!-- <button id="loadbtn">Tap here to load your maps</button> -->
+    <div class="wrapper">
+        <!-- Navagation -->
+        <nav class="main-nav">
+            <ul>
+                <li> <a href="index1.html">Monday</a></li>
+                <li> <a href="#">Tuesday</a></li>
+                <li> <a href="#">Wednesday</a></li>
+                <li> <a href="#">Thursday</a></li>
+                <li> <a href="#">Friday</a></li>
+                <li> <a href="#">Saturday</a></li>
+            </ul>
+        </nav>
 
-        </div>
-    </section>
-
+    </div>
 </body>
 
-<div class="bg"></div>
+<footer id="foot">
+    <div> All Rights Reserved &copy;2019 </div>
+</footer>
 
 </html>
