moved images out of child Directory

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 Monday
             </button>
             <div class="dropdown-menu">
-                <a class="dropdown-item text-dark" href="Maps/Monday Black/MB67/MB67-1.jpg">ASL</a>
+                <a class="dropdown-item text-dark" href="Maps">ASL</a>
                 <a class="dropdown-item text-primary" href="#">Recycling</a>
                 <a class="dropdown-item text-success" href="#">Green Waste</a>
             </div>
