--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 
 
 
-            <script src="script4.js"></script>
+            <script src=""></script>
 </body>
 <footer class="footer"></footer>
 
