--- a/hw.html
+++ b/hw.html
@@ -5,17 +5,43 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Monday Black MB67</title>
+    <link rel="stylesheet" href="style3.css">
+    <title>Document</title>
 </head>
 
-
 <body>
-    <img id="MB67" src="Maps/Monday Black/MB67/MB67-1.jpg" alt="MB67">
-    <img id="MB67" src="Maps/Monday Black/MB67/MB67-2.jpg" alt="MB67">
-    <img id="MB67" src="Maps/Monday Black/MB67/MB67-3.jpg" alt="MB67">
-    <img id="MB67" src="Maps/Monday Black/MB67/MB67-4.jpg" alt="MB67">
-    <img id="MB67" src="Maps/Monday Black/MB67/MB67-5.jpg" alt="MB67">
 
+    <div class="wrapper">
+
+        <img src="img/Monday Black/MB67/MB67-1.jpg" alt="">
+
+
+        <!--  <div>
+            <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <img src="img/Monday Black/MB67/MB67-1.jpg" class="d-block w-100" alt="wiil">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="img/Monday Black/MB67/MB67-2.jpg" class="d-block w-100" alt="will">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="img/Monday Black/MB67/MB67-3.jpg" class="d-block w-100" alt="will">
+                    </div>
+                </div>
+                <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Previous</span>
+                </a>
+                <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Next</span>
+                </a>
+            </div>
+        </div> -->
+
+
+    </div>
 
 </body>
 
