--- a/index5.html
+++ b/index5.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="style4.css">
+    <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
@@ -17,11 +17,8 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
         integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
         crossorigin="anonymous"></script>
-    <title>Home Page</title>
+    <title>Document</title>
 </head>
-
-
-
 
 <body>
     <div class="container">
@@ -32,7 +29,7 @@
                 Monday
             </button>
             <div class="dropdown-menu">
-                <a class="dropdown-item text-dark" href="Maps">ASL</a>
+                <a class="dropdown-item text-dark" href="monimg.html">ASL</a>
                 <a class="dropdown-item text-primary" href="#">Recycling</a>
                 <a class="dropdown-item text-success" href="#">Green Waste</a>
             </div>
@@ -98,14 +95,14 @@
 
             </div>
 
-        </div>
 
 
 
 
 
 
-        <script src=""></script>
+
+            <script src="script4.js"></script>
 </body>
 <footer class="footer"></footer>
 
