going to try it on mobl

--- a/monimg.html
+++ b/monimg.html
@@ -27,13 +27,13 @@
     <div id="carouselExampleFade" class="carousel slide carousel-fade" data-interval="false">
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img src="Maps/MB68/i1.jpg" class="d-block vh-100" alt="i1">
+                <img src="Maps/TB66/AAA1.jpg" class="d-block vh-100" alt="i1">
             </div>
             <div class="carousel-item">
-                <img src="Maps/MB68/i2.jpg" class="d-block vh-100" alt="i2">
+                <img src="Maps/TB66/AAA2.jpg" class="d-block vh-100" alt="i2">
             </div>
             <div class="carousel-item">
-                <img src="Maps/MB68/i3.jpg" class="d-block vh-100" alt="...">
+                <img src="Maps/TB66/T-B-66 #1.gif" class="d-block vh-100" alt="No Image Will">
             </div>
         </div>
         <a class="carousel-control-prev" href="#carouselExampleFade" role="button" data-slide="prev">
