Trying to ssee the mob

--- a/monimg.html
+++ b/monimg.html
@@ -23,8 +23,8 @@
 
 <body>
 
-
-    <div id="carouselExampleFade" class="carousel slide carousel-fade" data-interval="false">
+    <!-- cant zoom in or out and does not fit the screen -->
+    <!--  <div id="carouselExampleFade" class="carousel slide carousel-fade" data-interval="false">
         <div class="carousel-inner">
             <div class="carousel-item active">
                 <img src="Maps/TB66/AAA1.jpg" class="d-block vh-100" alt="i1">
@@ -44,14 +44,14 @@
             <span class="carousel-control-next-icon" aria-hidden="true"></span>
             <span class="sr-only">Next</span>
         </a>
-    </div>
+    </div> -->
 
     <div class="container">
-        <!--   <img src="Maps/MB68/i1.jpg" class="rounded mx-auto d-block" alt="No load">
-        <img src="Maps/MB68/i2.jpg" class="rounded mx-auto d-block" alt="No load">
-        <img src="Maps/MB68/i3.jpg" class="rounded mx-auto d-block" alt="No load">
-        <img src="Maps/MB68/i4.jpg" class="rounded mx-auto d-block" alt="No load">
-        <img src="Maps/MB68/i5.jpg" class="rounded mx-auto d-block" alt="No load"> -->
+        <img src="Maps/MB68/i1.jpg" class="rounded mx-auto d-block vh-100" alt="No load">
+        <img src="Maps/MB68/i2.jpg" class="rounded mx-auto d-block vh-100" alt="No load">
+        <img src="Maps/MB68/i3.jpg" class="rounded mx-auto d-block vh-100" alt="No load">
+        <img src="Maps/MB68/i4.jpg" class="rounded mx-auto d-block vh-100" alt="No load">
+        <img src="Maps/MB68/i5.jpg" class="rounded mx-auto d-block vh-100" alt="No load">
 
 
 
