--- a/index.html
+++ b/index.html
@@ -2,109 +2,55 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
-        integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
-        integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
-        integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
-        crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
-        integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
-        crossorigin="anonymous"></script>
-    <title>Document</title>
+    <title>BootStrapWilliam</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
+    <style>
+        /* Make the image fully responsive */
+        .carousel-inner img {
+            width: 100%;
+            height: 100%;
+        }
+    </style>
 </head>
 
 <body>
-    <div class="container">
-        <!-- Example single danger button -->
-        <div class="btn-group">
-            <button type="button" class="btn btn-info dropdown-toggle" data-toggle="dropdown" aria-haspopup="true"
-                aria-expanded="false">
-                Monday
-            </button>
-            <div class="dropdown-menu">
-                <a class="dropdown-item text-dark" href="monimg.html">ASL</a>
-                <a class="dropdown-item text-primary" href="#">Recycling</a>
-                <a class="dropdown-item text-success" href="#">Green Waste</a>
+
+    <div id="demo" class="carousel slide" data-ride="carousel">
+
+        <!-- Indicators -->
+        <ul class="carousel-indicators">
+            <li data-target="#demo" data-slide-to="0" class="active"></li>
+            <li data-target="#demo" data-slide-to="1"></li>
+            <li data-target="#demo" data-slide-to="2"></li>
+        </ul>
+
+        <!-- The slideshow -->
+        <div class="carousel-inner">
+            <div class="carousel-item active">
+                <img src="Maps/MB68/giftojpeg1.jpg" alt="" width="1100" height="500">
             </div>
-
-            <div class="btn-group">
-                <button type="button" class="btn btn-info dropdown-toggle" data-toggle="dropdown" aria-haspopup="true"
-                    aria-expanded="false">
-                    Tuesday
-                </button>
-                <div class="dropdown-menu">
-                    <a class="dropdown-item text-dark" href="#">ASL</a>
-                    <a class="dropdown-item text-primary" href="#">Recycling</a>
-                    <a class="dropdown-item text-success" href="#">Green Waste</a>
-                </div>
+            <div class="carousel-item">
+                <img src="Maps/MB68/giftojpeg2.jpg" alt="" width="1100" height="500">
             </div>
-
-            <div class="btn-group">
-                <button type="button" class="btn btn-info dropdown-toggle" data-toggle="dropdown" aria-haspopup="true"
-                    aria-expanded="false">
-                    Wednesday
-                </button>
-                <div class="dropdown-menu">
-                    <a class="dropdown-item text-dark" href="#">ASL</a>
-                    <a class="dropdown-item text-primary" href="#">Recycling</a>
-                    <a class="dropdown-item text-success" href="#">Green Waste</a>
-                </div>
+            <div class="carousel-item">
+                <img src="Maps/MB68/giftojpeg3.jpg" alt="" width="1100" height="500">
             </div>
+        </div>
 
-            <div class="btn-group">
-                <button type="button" class="btn btn-info dropdown-toggle" data-toggle="dropdown" aria-haspopup="true"
-                    aria-expanded="false">
-                    Thursday
-                </button>
-                <div class="dropdown-menu">
-                    <a class="dropdown-item text-dark" href="#">ASL</a>
-                    <a class="dropdown-item text-primary" href="#">Recycling</a>
-                    <a class="dropdown-item text-success" href="#">Green Waste</a>
-                </div>
+        <!-- Left and right controls -->
+        <a class="carousel-control-prev" href="#demo" data-slide="prev">
+            <span class="carousel-control-prev-icon"></span>
+        </a>
+        <a class="carousel-control-next" href="#demo" data-slide="next">
+            <span class="carousel-control-next-icon"></span>
+        </a>
+    </div>
 
-                <div class="btn-group">
-                    <button type="button" class="btn btn-info dropdown-toggle" data-toggle="dropdown"
-                        aria-haspopup="true" aria-expanded="false">
-                        Friday
-                    </button>
-                    <div class="dropdown-menu">
-                        <a class="dropdown-item text-dark" href="#">ASL</a>
-                        <a class="dropdown-item text-primary" href="#">Recycling</a>
-                        <a class="dropdown-item text-success" href="#">Green Waste</a>
-                    </div>
-                </div>
-                <div class="btn-group">
-                    <button type="button" class="btn btn-info dropdown-toggle" data-toggle="dropdown"
-                        aria-haspopup="true" aria-expanded="false">
-                        Saturday
-                    </button>
-                    <div class="dropdown-menu">
-                        <a class="dropdown-item text-dark" href="#">ASL</a>
-                        <a class="dropdown-item text-primary" href="#">Recycling</a>
-                        <a class="dropdown-item text-success" href="#">Green Waste</a>
-                    </div>
-                </div>
-
-
-            </div>
-
-
-
-
-
-
-
-
-            <script src="script4.js"></script>
-            <script src="scriptmon.js"></script>
 </body>
-<footer class="footer"></footer>
 
 </html>
